src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Business_Team__c</fullName>
        <label>Business Team</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Resource Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US DC Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution Dealer Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Relationship Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noncompensable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non US Dealer Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non US MIL Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Dealer Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US MFD Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US WMG Sales</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Title__c</fullName>
        <label>Business Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Seniority_Date__c</fullName>
        <label>Company Seniority Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_2_Work__c</fullName>
        <label>Country 2 Work</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_2__c</fullName>
        <label>Country 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_3_Work__c</fullName>
        <label>Country 3 Work</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Description__c</fullName>
        <label>Department Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Entry_Date__c</fullName>
        <label>Department Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Class_Description__c</fullName>
        <label>Employee Class Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Class__c</fullName>
        <label>Employee Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Return_Date__c</fullName>
        <label>Expected Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_or_Part_Time__c</fullName>
        <label>Full or Part Time</label>
        <picklist>
            <picklistValues>
                <fullName>Full-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsNotValidUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNotValidUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Entry_Date__c</fullName>
        <label>Job Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Family__c</fullName>
        <label>Job Family</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date_Worked__c</fullName>
        <label>Last Date Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFS_Level_2__c</fullName>
        <label>MFS Level 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Level_3__c</fullName>
        <label>MFS Level 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Level_4__c</fullName>
        <label>MFS Level 4</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Location__c</fullName>
        <label>MFS Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_NASD_Flag__c</fullName>
        <label>MFS NASD Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_NT_Domain__c</fullName>
        <label>MFS NT Domain</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_NT_User__c</fullName>
        <label>MFS NT User</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Phone__c</fullName>
        <label>MFS Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Position_Supervisor_ID_2__c</fullName>
        <label>MFS Position Supervisor ID 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Position_Supervisor_ID__c</fullName>
        <label>MFS Position Supervisor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Position_Supervisor_Name_2__c</fullName>
        <label>MFS Position Supervisor Name 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Position_Supervisor_Name__c</fullName>
        <label>MFS Position Supervisor Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Position_Supervisor_Position_ID_2__c</fullName>
        <label>MFS Position Supervisor Position ID 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Position_Supervisor_Position_ID__c</fullName>
        <label>MFS Position Supervisor Position ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Dashboard_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used for BI reporting purposes. This field will allow users access to multiple dashboards.</description>
        <label>Multi-Dashboard View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Officer_Code_Description__c</fullName>
        <label>Officer Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Officer_Code__c</fullName>
        <label>Officer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old SFDC ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Hire_Date__c</fullName>
        <label>Original Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Entry_Date__c</fullName>
        <label>Position Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Number__c</fullName>
        <label>Position Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <label>Preferred First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Last_Name__c</fullName>
        <label>Preferred Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Middle_Name__c</fullName>
        <label>Preferred Middle Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <label>RC Code</label>
        <picklist>
            <picklistValues>
                <fullName>B/D or FIAD, RC = 21025 approver: Doug Bailey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Relations, RC = 23520 approver: Mike Keenan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISG, RC = 23710 approver: Ryan Mullen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG, RC = 21026 approver: Mike MacNaught</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI, RC = 28630 approver: Carol Geremia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIL, RC = 51010 approver: Lina Medeiros</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regular_or_Temp__c</fullName>
        <label>Regular or Temp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rehire_Date__c</fullName>
        <label>Rehire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reports_to_ID__c</fullName>
        <label>Reports to ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Speaker_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Invitees Section(A360) to determine the status</description>
        <label>Requires Speaker Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saleslogix_Id__c</fullName>
        <externalId>true</externalId>
        <label>Saleslogix Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Description__c</fullName>
        <label>Security Clearance Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Clearance__c</fullName>
        <label>Security Clearance?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker_Request_Approval__c</fullName>
        <label>Speaker Request Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Business Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carol Geremia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Dept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Dept Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Jesse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Equity Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Director for BD/FIAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto Equity Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Equity Analyst</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_Request_Group__c</fullName>
        <label>Speaker Request Group</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Phone__c</fullName>
        <label>Special Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Standard_Hours__c</fullName>
        <label>Standard Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRN_Program__c</fullName>
        <label>TRN Program</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>This is used in Calendar views</description>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Licence_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Licence Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US External Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Internal Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Subject Matter Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Australia Unit Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective Investment Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Family of Funds (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Investment Funds (FCP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT III</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Picture_Link__c</fullName>
        <label>Wholesaler Picture Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>MFS_NT_User__c</columns>
        <columns>MFS_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>